add jvm study